// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cart should render correctly items 1`] = `
<div
  className="page_wrapper"
  id="page_wrapper"
>
  <div
    id="contents_wrapper"
  >
    <HeaderContainer
      secondaryTitle="Your Cart"
    />
    <div
      className="cart_contents_container"
      id="cart_contents_container"
    >
      <div>
        <div
          className="cart_list"
        >
          <div
            className="cart_quantity_label"
          >
            QTY
          </div>
          <div
            className="cart_desc_label"
          >
            DESCRIPTION
          </div>
          <withRouter(CartItem)
            item={
              Object {
                "desc": "Get your testing superhero on with the Sauce Labs bolt T-shirt. From American Apparel, 100% ringspun combed cotton, heather gray with red bolt.",
                "id": 1,
                "image_url": "bolt-shirt-1200x1500.jpg",
                "name": "Sauce Labs Bolt T-Shirt",
                "price": 15.99,
              }
            }
            key="0"
            showButton={true}
          />
          <withRouter(CartItem)
            item={
              Object {
                "desc": "Rib snap infant onesie for the junior automation engineer in development. Reinforced 3-snap bottom closure, two-needle hemmed sleeved and bottom won't unravel.",
                "id": 2,
                "image_url": "red-onesie-1200x1500.jpg",
                "name": "Sauce Labs Onesie",
                "price": 7.99,
              }
            }
            key="1"
            showButton={true}
          />
          <withRouter(CartItem)
            item={
              Object {
                "desc": "This classic Sauce Labs t-shirt is perfect to wear when cozying up to your keyboard to automate a few tests. Super-soft and comfy ringspun combed cotton.",
                "id": 3,
                "image_url": "red-tatt-1200x1500.jpg",
                "name": "Test.allTheThings() T-Shirt (Red)",
                "price": 15.99,
              }
            }
            key="2"
            showButton={true}
          />
        </div>
        <div
          className="cart_footer"
        >
          <Button
            label="Continue Shopping"
            onClick={[Function]}
            size="medium"
            testId="continue-shopping"
            type="secondary back"
          />
          <Button
            customClass="checkout_button"
            label="Checkout"
            onClick={[Function]}
            size="medium"
            testId="checkout"
            type="action"
          />
        </div>
      </div>
    </div>
  </div>
  <SwagLabsFooter />
</div>
`;

exports[`Cart should render correctly without any items 1`] = `
<div
  className="page_wrapper"
  id="page_wrapper"
>
  <div
    id="contents_wrapper"
  >
    <HeaderContainer
      secondaryTitle="Your Cart"
    />
    <div
      className="cart_contents_container"
      id="cart_contents_container"
    >
      <div>
        <div
          className="cart_list"
        >
          <div
            className="cart_quantity_label"
          >
            QTY
          </div>
          <div
            className="cart_desc_label"
          >
            DESCRIPTION
          </div>
        </div>
        <div
          className="cart_footer"
        >
          <Button
            label="Continue Shopping"
            onClick={[Function]}
            size="medium"
            testId="continue-shopping"
            type="secondary back"
          />
          <Button
            customClass="checkout_button"
            label="Checkout"
            onClick={[Function]}
            size="medium"
            testId="checkout"
            type="action"
          />
        </div>
      </div>
    </div>
  </div>
  <SwagLabsFooter />
</div>
`;
